# sdl_basics

./: .gitignore  Makefile.am  README  README.md  configure.ac
include/: CAnimation.h  CApp.h  CArea.h  CCamera.h  CEntity.h  CEvent.h  CMap.h  CSurface.h  CTile.h  Define.h
src/: CAnimation.cpp  CApp.cpp  CApp_on_cleanup.cpp  CApp_on_event.cpp  CApp_on_init.cpp  CApp_on_loop.cpp  CApp_on_render.cpp  CArea.cpp  CCamera.cpp  CEntity.cpp  CEvent.cpp  CMap.cpp  CSurface.cpp  CTile.cpp
